Figured out some spacing issues and fixed them.

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -9,6 +9,11 @@ html{
 	font-family: 'Quicksand', sans-serif;
 }
 
+//*{
+//	border-style: solid;
+//	border-width: 5px;
+//}
+
 @media screen and (min-width: 700px){
 	#main_content{
 		margin: auto;
@@ -56,7 +61,9 @@ nav{
 @media screen and (min-width: 1250px){
 	nav{
 		flex-direction: row;
-		padding: 1em;
+		padding-top: 1em;
+		padding-bottom: 1em;
+		justify-content: center;
 		align-items: center;
 	}
 }
